--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>My Aza | Clone</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>This is an Header</header>
+    <main>This is the main</main>
+    <footer>This is the footer</footer>
 
     <script src="./script.js"></script>
   </body>
