--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <main>This is the main</main>
     <footer>This is the footer</footer>
 
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
