Worked on desktop header

--- a/index.html
+++ b/index.html
@@ -3,11 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>My Aza | Clone</title>
   </head>
   <body>
-    <header>This is an Header</header>
+    <header>
+      <div class="logo-container">
+        <img src="./images/myaza-logo.png" alt="" class="myaza-logo" />
+        <p class="myaza-logo-text">myaza</p>
+      </div>
+      <div class="welcoming-box">
+        <div class="welcoming-text-container">
+          <p class="heyy">Hi, Joseph</p>
+          <p class="dashboard-welcome">Welcome to your dashboard</p>
+        </div>
+        <div class="about-usser-container">
+          <div class="notification-icon"><i class="bx bxs-bell"> </i></div>
+          <div class="user-icon-container">
+            <img
+              src="./images/myaza-user-image.png"
+              alt="user-profile-image"
+              class="user-image-icon"
+            />
+            <i class="bx bxs-chevron-down" ></i>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>This is the main</main>
     <footer>This is the footer</footer>
 
